Add Github OAuth authentication. Update swagger documentation
